cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

library
    exposed-modules:
        Day02

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0,
        split,

    hs-source-dirs:   .
    default-language: Haskell2010


executable aoc22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day02

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        aoc22,
        split,

    hs-source-dirs:   .
    default-language: Haskell2010
