cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

library
    exposed-modules:

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0,
        containers,
        split,

    hs-source-dirs:   .
    default-language: Haskell2010


executable aoc22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day21

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        aoc22,
        containers,
        split,

    hs-source-dirs:   .
    default-language: Haskell2010
